--- a/app/src/main/res/layout/activity_confirm_email.xml
+++ b/app/src/main/res/layout/activity_confirm_email.xml
@@ -9,16 +9,13 @@
 
     <ImageView
         android:id="@+id/imageconfirm"
-        android:layout_width="@dimen/_150sdp"
-        android:layout_height="@dimen/_150sdp"
-        android:layout_gravity="center"
+        android:layout_width="@dimen/_120sdp"
+        android:layout_height="@dimen/_120sdp"
+        android:layout_marginTop="@dimen/_8sdp"
         android:src="@drawable/logo"
-        android:layout_marginRight="0dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="0dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="@dimen/_10sdp" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textconfirmcode"
@@ -26,15 +23,13 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/imageconfirm"
         android:layout_gravity="center"
+        android:layout_marginTop="@dimen/_8sdp"
         android:text="Confirm code"
         android:textColor="#ffffff"
         android:textSize="@dimen/_30ssp"
-        android:layout_marginRight="0dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="0dp"
-        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
-        android:layout_marginTop="@dimen/_8sdp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageconfirm" />
 
     <TextView
@@ -43,29 +38,29 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/imageconfirm"
         android:layout_gravity="center"
+        android:layout_marginEnd="@dimen/_8sdp"
+        android:layout_marginLeft="@dimen/_8sdp"
+        android:layout_marginRight="@dimen/_8sdp"
+        android:layout_marginStart="@dimen/_8sdp"
+        android:layout_marginTop="@dimen/_8sdp"
+        android:gravity="center"
         android:text="In order to continue. you must confirm your email address :"
         android:textColor="@color/colorAccent"
         android:textSize="@dimen/_16ssp"
-        android:layout_marginRight="@dimen/_10sdp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="@dimen/_10sdp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        android:layout_marginTop="@dimen/_8sdp"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textconfirmcode" />
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:id="@+id/linearLayout3"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_24sdp"
         android:background="#BB000000"
         android:orientation="vertical"
         android:padding="@dimen/_8sdp"
-        android:layout_marginRight="0dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="0dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:id="@+id/linearLayout3"
-        android:layout_marginTop="@dimen/_20sdp"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textcontinueconfirm">
 
         <EditText
@@ -75,9 +70,9 @@
             android:layout_centerHorizontal="true"
             android:layout_gravity="center_horizontal|top"
             android:layout_marginBottom="@dimen/_5sdp"
+            android:background="@null"
             android:drawableLeft="@drawable/_eye"
             android:drawablePadding="@dimen/_15sdp"
-            android:background="@null"
             android:gravity="left"
             android:hint="Enter your confirm code"
             android:inputType="text"
@@ -87,17 +82,17 @@
 
     <Button
         android:id="@+id/btn_continue"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="@dimen/_75sdp"
+        android:layout_marginBottom="@dimen/_8sdp"
         android:background="@color/colorAccent"
         android:text="Continue"
         android:textAllCaps="false"
         android:textSize="@dimen/_20ssp"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="@dimen/_10sdp"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="0dp"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
         app:layout_constraintVertical_bias="0.0" />
 
