--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,10 +9,11 @@
 
     <ImageView
         android:id="@+id/imagelogin"
-        android:layout_width="@dimen/_150sdp"
-        android:layout_height="@dimen/_150sdp"
-        android:layout_gravity="center"
-        android:layout_marginTop="@dimen/_10sdp"
+        android:layout_width="@dimen/_120sdp"
+        android:layout_height="@dimen/_120sdp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginTop="@dimen/_8sdp"
         android:src="@drawable/logo"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -22,15 +23,12 @@
         android:id="@+id/textlogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/imagelogin"
-        android:layout_gravity="center"
-        android:layout_margin="@dimen/_20sdp"
-        android:layout_marginBottom="@dimen/_24sdp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginTop="@dimen/_8sdp"
         android:text="Get involved"
         android:textColor="#ffffff"
         android:textSize="@dimen/_30ssp"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
-        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imagelogin" />
@@ -39,13 +37,16 @@
         android:id="@+id/linearLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/_10sdp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginTop="@dimen/_24sdp"
         android:background="#BB000000"
         android:orientation="vertical"
         android:padding="@dimen/_8sdp"
-        app:layout_constraintBottom_toTopOf="@+id/btn_login"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textlogin">
 
         <EditText
             android:id="@+id/txtusernamelogin"
@@ -54,9 +55,9 @@
             android:layout_centerHorizontal="true"
             android:layout_gravity="center_horizontal|top"
             android:layout_marginBottom="@dimen/_5sdp"
+            android:background="@null"
             android:drawableLeft="@drawable/usernameimage"
             android:drawablePadding="@dimen/_15sdp"
-            android:background="@null"
             android:gravity="left"
             android:hint="User name"
             android:inputType="textPersonName"
@@ -73,9 +74,9 @@
             android:layout_height="@dimen/_50sdp"
             android:layout_gravity="center_horizontal|top"
             android:layout_marginBottom="@dimen/_5sdp"
+            android:background="@null"
             android:drawableLeft="@drawable/password"
             android:drawablePadding="@dimen/_15sdp"
-            android:background="@null"
             android:gravity="left"
             android:hint="Password"
             android:inputType="textPassword"
@@ -87,40 +88,47 @@
         android:id="@+id/text_forget"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/_10sdp"
-        android:layout_marginLeft="@dimen/_10sdp"
-        android:layout_marginRight="@dimen/_10sdp"
-        android:layout_marginStart="@dimen/_10sdp"
+        android:layout_marginLeft="@dimen/_8sdp"
+        android:layout_marginRight="@dimen/_8sdp"
+        android:layout_marginTop="@dimen/_8sdp"
         android:text="Forget Passowrd"
         android:textColor="@color/colorAccent"
         android:textSize="@dimen/_13ssp"
-        app:layout_constraintLeft_toRightOf="@+id/btn_login"
+        app:layout_constraintHorizontal_bias="0.968"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/btn_login" />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
     <!--android:visibility="invisible" -->
 
     <ImageButton
         android:id="@+id/btn_login"
         android:layout_width="@dimen/_75sdp"
         android:layout_height="@dimen/_75sdp"
-        android:layout_marginBottom="@dimen/_10sdp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginTop="@dimen/_8sdp"
         android:background="@drawable/oragnecircal"
         android:src="@drawable/download_right"
-        app:layout_constraintBottom_toTopOf="@+id/txt_toregister"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
     <TextView
         android:id="@+id/txt_toregister"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/_10sdp"
+        android:layout_marginBottom="@dimen/_8sdp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginTop="@dimen/_8sdp"
         android:gravity="center"
         android:text="Don't have ana accounts?Sign Up"
         android:textColor="@color/colorAccent"
         android:textSize="@dimen/_15ssp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
-
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_login"
+        app:layout_constraintVertical_bias="0.096" />
 </android.support.constraint.ConstraintLayout>
