--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -9,32 +9,31 @@
 
     <ImageButton
         android:id="@+id/imageregister"
-        android:layout_width="@dimen/_150sdp"
-        android:layout_height="@dimen/_150sdp"
-        android:layout_gravity="center"
+        android:layout_width="@dimen/_120sdp"
+        android:layout_height="@dimen/_120sdp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="0dp"
         android:layout_marginTop="@dimen/_8sdp"
         android:background="@drawable/circle_shape"
         android:src="@drawable/camera"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginRight="@dimen/_8sdp"
-        android:layout_marginLeft="@dimen/_8sdp"
-        android:layout_marginBottom="@dimen/_8sdp"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout4" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
         android:id="@+id/linearLayout4"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginTop="@dimen/_16sdp"
         android:background="#BB000000"
         android:orientation="vertical"
         android:padding="@dimen/_8sdp"
-        app:layout_constraintBottom_toTopOf="@+id/btn_register"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginBottom="0dp">
+        app:layout_constraintTop_toBottomOf="@+id/imageregister">
 
         <EditText
             android:id="@+id/txtusernameregister"
@@ -43,9 +42,9 @@
             android:layout_centerHorizontal="true"
             android:layout_gravity="center_horizontal|top"
             android:layout_marginBottom="@dimen/_5sdp"
+            android:background="@null"
             android:drawableLeft="@drawable/usernameimage"
             android:drawablePadding="@dimen/_15sdp"
-            android:background="@null"
             android:gravity="left"
             android:hint="Username"
             android:inputType="textPersonName"
@@ -62,9 +61,9 @@
             android:layout_height="@dimen/_50sdp"
             android:layout_gravity="center_horizontal|top"
             android:layout_marginBottom="@dimen/_5sdp"
+            android:background="@null"
             android:drawableLeft="@drawable/password"
             android:drawablePadding="@dimen/_15sdp"
-            android:background="@null"
             android:gravity="left"
             android:hint="Password"
             android:inputType="textPassword"
@@ -81,9 +80,9 @@
             android:layout_height="@dimen/_50sdp"
             android:layout_gravity="center_horizontal|top"
             android:layout_marginBottom="@dimen/_5sdp"
+            android:background="@null"
             android:drawableLeft="@drawable/message"
             android:drawablePadding="@dimen/_15sdp"
-            android:background="@null"
             android:gravity="left"
             android:hint="Email"
             android:inputType="textEmailAddress"
@@ -95,39 +94,46 @@
         android:id="@+id/btn_register"
         android:layout_width="0dp"
         android:layout_height="@dimen/_75sdp"
-        android:layout_marginBottom="@dimen/_10sdp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginTop="0dp"
         android:background="@color/colorAccent"
         android:text="Sign Up"
         android:textAllCaps="false"
         android:textSize="@dimen/_20ssp"
-        app:layout_constraintBottom_toTopOf="@+id/txt_or"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />
 
     <TextView
         android:id="@+id/txt_or"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/_10sdp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginTop="@dimen/_8sdp"
         android:gravity="center"
         android:text="Or"
         android:textColor="#ffffff"
         android:textSize="@dimen/_20ssp"
-        app:layout_constraintBottom_toTopOf="@+id/btn_login_facebok"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_register" />
 
     <Button
         android:id="@+id/btn_login_facebok"
         android:layout_width="0dp"
         android:layout_height="@dimen/_75sdp"
         android:layout_marginBottom="@dimen/_8sdp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginTop="@dimen/_8sdp"
         android:background="@drawable/facebook"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txt_or"
+        app:layout_constraintVertical_bias="0.0" />
 
 </android.support.constraint.ConstraintLayout>
