--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -32,7 +32,7 @@
         android:layout_marginTop="@dimen/_8sdp"
         android:text="Change password"
         android:textColor="#ffffff"
-        android:textSize="@dimen/_30ssp"
+        android:textSize="@dimen/_25ssp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imagechangetpassword" />
@@ -41,13 +41,53 @@
         android:id="@+id/linearLayout2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_20sdp"
+        android:layout_marginTop="@dimen/_8sdp"
         android:background="#BB000000"
         android:orientation="vertical"
         android:padding="@dimen/_8sdp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textchangepassword">
+
+        <EditText
+            android:id="@+id/txt_email_newpass"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_50ssp"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="center_horizontal|top"
+            android:layout_marginBottom="@dimen/_5sdp"
+            android:background="@null"
+            android:drawableLeft="@drawable/message"
+            android:drawablePadding="@dimen/_15sdp"
+            android:gravity="left"
+            android:hint="Email"
+            android:inputType="textEmailAddress"
+            android:padding="@dimen/_15sdp" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/tab_enable" />
+
+        <EditText
+            android:id="@+id/txt_code_newpass"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_50ssp"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="center_horizontal|top"
+            android:layout_marginBottom="@dimen/_5sdp"
+            android:background="@null"
+            android:drawableLeft="@drawable/_eye"
+            android:drawablePadding="@dimen/_15sdp"
+            android:gravity="left"
+            android:hint="Confirm code"
+            android:inputType="text"
+            android:padding="@dimen/_15sdp" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/tab_enable" />
 
         <EditText
             android:id="@+id/txtnewpass"
@@ -89,7 +129,7 @@
         android:id="@+id/btn_changepassword"
         android:layout_width="0dp"
         android:layout_height="@dimen/_75sdp"
-        android:layout_marginBottom="@dimen/_8sdp"
+        android:layout_marginBottom="8dp"
         android:layout_marginLeft="0dp"
         android:layout_marginRight="0dp"
         android:layout_marginTop="0dp"
