fadel fel Auth kolo el facebook hs2l feha el backend bs awl ma arw7 bokra w a3mlha fe swany w fadel goz2 el camera ene a5liha zy el select image w bs keda

--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -33,6 +33,7 @@
         android:text="Change password"
         android:textColor="#ffffff"
         android:textSize="@dimen/_25ssp"
+        android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imagechangetpassword" />
@@ -62,7 +63,8 @@
             android:gravity="left"
             android:hint="Email"
             android:inputType="textEmailAddress"
-            android:padding="@dimen/_15sdp" />
+            android:padding="@dimen/_15sdp"
+            android:textStyle="bold" />
 
         <View
             android:layout_width="match_parent"
@@ -82,7 +84,8 @@
             android:gravity="left"
             android:hint="Confirm code"
             android:inputType="text"
-            android:padding="@dimen/_15sdp" />
+            android:padding="@dimen/_15sdp"
+            android:textStyle="bold" />
 
         <View
             android:layout_width="match_parent"
@@ -102,7 +105,8 @@
             android:gravity="left"
             android:hint="New password"
             android:inputType="textPassword"
-            android:padding="@dimen/_15sdp" />
+            android:padding="@dimen/_15sdp"
+            android:textStyle="bold" />
 
         <View
             android:layout_width="match_parent"
@@ -121,7 +125,8 @@
             android:gravity="left"
             android:hint="Confirm password"
             android:inputType="textPassword"
-            android:padding="@dimen/_15sdp" />
+            android:padding="@dimen/_15sdp"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
@@ -137,6 +142,7 @@
         android:text="Confirm"
         android:textAllCaps="false"
         android:textSize="@dimen/_20ssp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
