--- a/app/src/main/res/layout/activity_confirm_email.xml
+++ b/app/src/main/res/layout/activity_confirm_email.xml
@@ -27,6 +27,7 @@
         android:text="Confirm code"
         android:textColor="#ffffff"
         android:textSize="@dimen/_25ssp"
+        android:textStyle="bold"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -47,6 +48,7 @@
         android:text="In order to continue. you must confirm your email address :"
         android:textColor="@color/colorAccent"
         android:textSize="@dimen/_15ssp"
+        android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textconfirmcode" />
@@ -76,7 +78,8 @@
             android:gravity="left"
             android:hint="Enter your confirm code"
             android:inputType="text"
-            android:padding="@dimen/_15sdp" />
+            android:padding="@dimen/_15sdp"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
@@ -89,6 +92,7 @@
         android:text="Continue"
         android:textAllCaps="false"
         android:textSize="@dimen/_20ssp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
