--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -2,9 +2,9 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/parentView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/parentView"
     android:background="@drawable/backgroundall"
     tools:context="com.example.amr.sunbula.RegisterActivity">
 
@@ -48,8 +48,10 @@
             android:drawablePadding="@dimen/_15sdp"
             android:gravity="left"
             android:hint="Username"
+
             android:inputType="textPersonName"
-            android:padding="@dimen/_15sdp" />
+            android:padding="@dimen/_15sdp"
+            android:textStyle="bold" />
 
         <View
             android:layout_width="match_parent"
@@ -68,7 +70,8 @@
             android:gravity="left"
             android:hint="Password"
             android:inputType="textPassword"
-            android:padding="@dimen/_15sdp" />
+            android:padding="@dimen/_15sdp"
+            android:textStyle="bold" />
 
         <View
             android:layout_width="match_parent"
@@ -87,7 +90,8 @@
             android:gravity="left"
             android:hint="Email"
             android:inputType="textEmailAddress"
-            android:padding="@dimen/_15sdp" />
+            android:padding="@dimen/_15sdp"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
@@ -102,6 +106,7 @@
         android:text="Sign Up"
         android:textAllCaps="false"
         android:textSize="@dimen/_20ssp"
+        android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />
