--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -31,6 +31,7 @@
         android:text="Forget password?"
         android:textColor="#ffffff"
         android:textSize="@dimen/_25ssp"
+        android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageresetpassword" />
@@ -46,6 +47,7 @@
         android:text="you can reset password."
         android:textColor="@color/colorAccent"
         android:textSize="@dimen/_15ssp"
+        android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textforgetpassword" />
@@ -77,7 +79,8 @@
             android:gravity="left"
             android:hint="Enter your email"
             android:inputType="textEmailAddress"
-            android:padding="@dimen/_15sdp" />
+            android:padding="@dimen/_15sdp"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
@@ -93,6 +96,7 @@
         android:text="Request password reset"
         android:textAllCaps="false"
         android:textSize="@dimen/_20ssp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
