--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -23,6 +23,7 @@
         android:id="@+id/text_splash"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textStyle="bold"
         android:layout_marginLeft="0dp"
         android:layout_marginRight="0dp"
         android:layout_marginTop="@dimen/_32sdp"
@@ -55,6 +56,7 @@
         android:layout_marginRight="0dp"
         android:layout_marginTop="@dimen/_8sdp"
         android:text="LODING APP"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintLeft_toLeftOf="parent"
