--- a/app/src/main/res/layout/fragment_all_profile.xml
+++ b/app/src/main/res/layout/fragment_all_profile.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:text="All"
+        android:textStyle="bold"
         android:textColor="#000000"
         android:textSize="@dimen/_30ssp" />
 
