--- a/app/src/main/res/layout/fragment_joined_profile.xml
+++ b/app/src/main/res/layout/fragment_joined_profile.xml
@@ -12,6 +12,7 @@
         android:layout_centerInParent="true"
         android:text="Joined Causes"
         android:textColor="#000000"
+        android:textStyle="bold"
         android:textSize="@dimen/_30ssp" />
 
 </RelativeLayout>
