--- a/app/src/main/res/layout/item_in_causes.xml
+++ b/app/src/main/res/layout/item_in_causes.xml
@@ -30,6 +30,7 @@
             android:layout_marginRight="0dp"
             android:layout_marginTop="@dimen/_20sdp"
             android:background="@drawable/btn"
+            android:textStyle="bold"
             android:text="Donate"
             android:textAllCaps="false"
             android:textColor="@color/colorAccent"
