--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -7,7 +7,7 @@
     android:background="@drawable/backgroundall"
     tools:context="com.example.amr.sunbula.ResetPasswordActivity">
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imageresetpassword"
         android:layout_width="@dimen/_120sdp"
         android:layout_height="@dimen/_120sdp"
