--- a/app/src/main/res/layout/activity_confirm_email.xml
+++ b/app/src/main/res/layout/activity_confirm_email.xml
@@ -7,7 +7,7 @@
     android:background="@drawable/backgroundall"
     tools:context="com.example.amr.sunbula.ConfirmEmailActivity">
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imageconfirm"
         android:layout_width="@dimen/_120sdp"
         android:layout_height="@dimen/_120sdp"
