--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -8,15 +8,14 @@
     android:background="@drawable/backgroundall"
     tools:context="com.example.amr.sunbula.RegisterActivity">
 
-    <ImageButton
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imageregister"
         android:layout_width="@dimen/_120sdp"
         android:layout_height="@dimen/_120sdp"
         android:layout_marginLeft="0dp"
         android:layout_marginRight="0dp"
         android:layout_marginTop="@dimen/_8sdp"
-        android:background="@drawable/circle_shape"
-        android:src="@drawable/camera"
+        android:src="@drawable/circle_shape"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -139,5 +138,20 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_or"
         app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/txt_to_changeimage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:textColor="#AAffffff"
+        android:text="Edit"
+        app:layout_constraintBottom_toBottomOf="@+id/imageregister"
+        app:layout_constraintLeft_toLeftOf="@+id/imageregister"
+        app:layout_constraintRight_toRightOf="@+id/imageregister"
+        app:layout_constraintTop_toTopOf="@+id/imageregister" />
 
 </android.support.constraint.ConstraintLayout>
