--- a/app/src/main/res/layout/item_in_causes.xml
+++ b/app/src/main/res/layout/item_in_causes.xml
@@ -15,7 +15,7 @@
             android:id="@+id/view2"
             android:layout_width="1dp"
             android:layout_height="0dp"
-            android:layout_marginLeft="@dimen/_32sdp"
+            android:layout_marginLeft="@dimen/_30sdp"
             android:layout_marginTop="0dp"
             android:background="@color/tab_enable"
             app:layout_constraintBottom_toTopOf="@+id/image_cause"
@@ -30,15 +30,15 @@
             android:layout_marginRight="0dp"
             android:layout_marginTop="@dimen/_20sdp"
             android:background="@drawable/btn"
-            android:textStyle="bold"
             android:text="Donate"
             android:textAllCaps="false"
             android:textColor="@color/colorAccent"
+            android:textStyle="bold"
             app:layout_constraintLeft_toRightOf="@+id/view"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout11" />
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/image_user_cause"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -47,11 +47,11 @@
             android:layout_marginStart="@dimen/_8sdp"
             android:layout_marginTop="@dimen/_8sdp"
             android:layout_weight="1"
+            android:src="@drawable/avatar_1"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.01"
-            app:srcCompat="@drawable/avatar_1" />
+            app:layout_constraintVertical_bias="0.01" />
 
         <LinearLayout
             android:id="@+id/linearLayout10"
@@ -86,26 +86,24 @@
                 android:textStyle="bold" />
         </LinearLayout>
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/image_cause"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_8sdp"
+            android:src="@drawable/layer_2"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout10"
-            app:srcCompat="@drawable/layer_2" />
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout10" />
 
         <View
             android:id="@+id/view"
             android:layout_width="1dp"
             android:layout_height="0dp"
-            android:layout_marginLeft="@dimen/_32sdp"
-            android:layout_marginStart="@dimen/_32sdp"
+            android:layout_marginLeft="@dimen/_30sdp"
             android:background="@color/tab_enable"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/image_user_cause" />
-
 
         <TextView
             android:id="@+id/cause__details"
