--- a/app/src/main/res/layout/item_in_messages.xml
+++ b/app/src/main/res/layout/item_in_messages.xml
@@ -19,17 +19,17 @@
             android:layout_marginLeft="@dimen/_8sdp"
             android:layout_marginRight="@dimen/_8sdp"
             android:layout_marginTop="@dimen/_8sdp"
-            android:textStyle="bold"
             android:background="@drawable/circle_shape_in_messages"
             android:text="224"
             android:textSize="@dimen/_11ssp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="0.915"
             app:layout_constraintLeft_toRightOf="@+id/linearLayout6"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/message_user_pic"
             android:layout_width="0dp"
             android:layout_height="@dimen/_50sdp"
@@ -38,10 +38,10 @@
             android:layout_marginStart="@dimen/_8sdp"
             android:layout_marginTop="@dimen/_8sdp"
             android:layout_weight="1"
+            android:src="@drawable/avatar"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/avatar" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <LinearLayout
             android:id="@+id/linearLayout6"
