--- a/app/src/main/res/layout/item_in_recieve_message.xml
+++ b/app/src/main/res/layout/item_in_recieve_message.xml
@@ -17,14 +17,14 @@
             android:layout_marginBottom="@dimen/_8sdp"
             android:layout_marginRight="@dimen/_24sdp"
             android:layout_marginTop="@dimen/_8sdp"
-            android:textStyle="bold"
             android:text="2 min ago"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout16"
             app:layout_constraintVertical_bias="0.0" />
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/message_recieve_pic"
             android:layout_width="0dp"
             android:layout_height="@dimen/_50sdp"
@@ -32,11 +32,11 @@
             android:layout_marginLeft="@dimen/_8sdp"
             android:layout_marginTop="@dimen/_8sdp"
             android:layout_weight="1"
+            android:src="@drawable/avatar"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.481"
-            app:srcCompat="@drawable/avatar" />
+            app:layout_constraintVertical_bias="0.481" />
 
         <LinearLayout
             android:id="@+id/linearLayout16"
@@ -63,10 +63,10 @@
                 android:paddingLeft="@dimen/_24sdp"
                 android:paddingRight="@dimen/_8sdp"
                 android:paddingTop="@dimen/_8sdp"
-                android:textStyle="bold"
                 android:text="Amr Abdelhameed Abuelkhair"
                 android:textColor="@color/tab_enable"
-                android:textSize="@dimen/_12ssp" />
+                android:textSize="@dimen/_12ssp"
+                android:textStyle="bold" />
 
         </LinearLayout>
 
