--- a/app/src/main/res/layout/item_in_send_message.xml
+++ b/app/src/main/res/layout/item_in_send_message.xml
@@ -23,7 +23,7 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout6" />
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/message_sender_pic"
             android:layout_width="0dp"
             android:layout_height="@dimen/_50sdp"
@@ -31,11 +31,11 @@
             android:layout_marginRight="@dimen/_8sdp"
             android:layout_marginTop="@dimen/_8sdp"
             android:layout_weight="1"
+            android:src="@drawable/avatar"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.518"
-            app:srcCompat="@drawable/avatar" />
+            app:layout_constraintVertical_bias="0.518" />
 
         <LinearLayout
             android:id="@+id/linearLayout6"
