--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -147,8 +147,8 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
+        android:text="Upload image"
         android:textColor="#AAffffff"
-        android:text="Edit"
         app:layout_constraintBottom_toBottomOf="@+id/imageregister"
         app:layout_constraintLeft_toLeftOf="@+id/imageregister"
         app:layout_constraintRight_toRightOf="@+id/imageregister"
